# swordfish

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MAIN_SPLIT_TODO.md  MCP_PLAN.md  README  README.md  docker-compose.override.yml  docker-compose.yaml  docker-entrypoint.sh  docker-run-over-ssh.sh  docker-start.sh  docker-test-over-ssh.sh  pyproject.toml  swordfish.py
.github/workflows/: ci.yml  deploy.yml
src/reahl/swordfish/: __init__.py  browser.py  class_diagram.py  execution.py  inspector.py  main.py  navigation.py  object_diagram.py  selection_list.py  tab_registry.py  text_editing.py  ui_context.py  ui_support.py
src/reahl/swordfish/gemstone/: __init__.py  breakpoint_registry.py  browser.py  debugging.py  session.py
src/reahl/swordfish/mcp/: __init__.py  ast_assets.py  debug_registry.py  integration_state.py  main.py  server.py  session_registry.py  tools.py  tracer_assets.py
src/reahl/swordfish/mcp/ast/: swordfish_mcp_ast_support.st
src/reahl/swordfish/mcp/tracing/: __init__.py  swordfish_mcp_tracer.st
src/swordfish/: main.py
tests/: test_gemstone_browser_breakpoints.py  test_gemstone_browser_extract.py  test_gemstone_browser_packages.py  test_gemstone_browser_selector_rename.py  test_gemstone_browser_strict_ast.py  test_gemstone_browser_tracer.py  test_gemstone_debugging.py  test_gui.py  test_mcp_ast_assets.py  test_mcp_debug_registry.py  test_mcp_debug_tools.py  test_mcp_live_gemstone.py  test_mcp_main.py  test_mcp_server.py  test_mcp_session_registry.py  test_mcp_tool_policies.py  test_mcp_tracer_assets.py
