[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reahl-swordfish"
version = "0.1.1"
description = "A classic Smalltalk IDE for GemStone/Smalltalk"
readme = "README.md"
authors = [
    {name = "Reahl Software Services (Pty) Ltd", email = "info@reahl.org"}
]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
]
keywords = ["smalltalk", "gemstone", "ide", "development"]
dependencies = [
    "reahl-parseltongue",
]
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/reahl/swordfish"
"Bug Tracker" = "https://github.com/reahl/swordfish/issues"

[project.scripts]
swordfish = "reahl.swordfish.main:run_application"
swordfish-mcp = "reahl.swordfish.mcp.main:run_application"

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.0,<2; python_version >= '3.10'",
]
test = [
    "reahl-tofu",
    "setuptools<81",
    "pytest-xvfb",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["reahl*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"reahl.swordfish.mcp.tracing" = ["*.st"]
"reahl.swordfish.mcp.ast" = ["*.st"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py36"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]
